--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ tabulate = "^0.8.9"
 joblib = "^1.1.0"
 torch = "^1.10.1"
 pandas = "^1.4.0"
+tables = "^3.7.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
