Add onnx conversion packages

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ joblib = "^1.1.0"
 torch = "^1.10.1"
 pandas = "^1.4.0"
 tables = "^3.7.0"
+onnx = "^1.11.0"
+onnx2pytorch = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
